# 2048_bot_latest

./: .gitignore  BACKGROUND_SERVICE_ROADMAP.md  COMPREHENSIVE_ENGINEERING_REPORT.md  IMPLEMENTATION_PLAN.md  LAUNCHER_FIXUP.md  LAUNCHER_README.md  LICENSE  MOBILE_CONNECTION_FIXES.md  MODEL_STUDIO_CRASH_ANALYSIS.md  MODEL_STUDIO_IMPLEMENTATION_STATUS.md  MODEL_STUDIO_ROADMAP.md  NETWORK_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PWA_INSTALL_GUIDE.md  README.md  REMOTE_ACCESS_ROADMAP.md  STYLE_GUIDE.md  TECHNICAL_ARCHITECTURE.md  TIMING_ANALYSIS_README.md  fix_windows_firewall.py  launcher.py  launcher_dashboard.py  network_troubleshooter.py  run_working_tests.py  start_tunnel.py  test_model_studio.py  test_playback_sim.py  test_pwa_origin_unification.py  test_tool_check.py  tunnel_demo.py
backend/: main.py  monitor_training.py  pyproject.toml  test_gpu_usage.py
backend/app/api/: design_router.py  websocket_manager.py
backend/app/environment/: __init__.py  game_2048.py  gpu_2048_env.py  gym_2048_env.py
backend/app/models/: __init__.py  checkpoint_metadata.py  checkpoint_playback.py  game_transformer.py  model_config.py
backend/app/training/: __init__.py  ppo_trainer.py  training_manager.py
backend/app/utils/: __init__.py  action_selection.py  mock_data.py  system_health.py  timing_analyzer.py
frontend/: index.html  tailwind.config.js  test_browser_enhanced.py  vite.config.temp.ts  vite.config.ts
integration/: test_checkpoint_loading.py  test_checkpoint_loading_issue.py  test_live_playback.py  test_mock_backend.py  test_mock_backend_basic.py
scripts/: README.md  (+4 more)
(+153 files in other folders)
